--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
 <title>うええ</title>
 </haed>
 <body>
+  <nav>
+    <from id="from">
+      <select name="select">
+        <option value="index.html">メインページ</option>
+        <option value="other.html">別ページ</option>
+      </select>
+    </from>
+  </nav>
 <section>
 <p id="countdown"></p>
 </section>
