--- a/other.html
+++ b/other.html
@@ -6,7 +6,7 @@
 </haed>
 <body>
 <nav>
-<from id="form">
+<form id="form">
 <select name="select">
 <option value="index.html">メインページ</option>
 <option value="other.html">別ページ</option>
