--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 </haed>
 <body>
   <nav>
-    <from id="form">
+    <form id="form">
       <select name="select">
         <option value="index.html">メインページ</option>
         <option value="other.html">別ページ</option>
       </select>
-    </from>
+    </form>
   </nav>
 <section>
 <p id="countdown"></p>
