--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <title>うええ</title>
 </haed>
 <body>
+  <section>
+    <p id="cookie"></p>
+  </section>
   <nav>
     <form id="form">
       <select name="select">
