--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </haed>
 <body>
   <section>
-    <p id="cookie"></p>
+    <p id="cookie"></p><p id="countdown"></p>
   </section>
   <nav>
     <form id="form">
@@ -16,9 +16,9 @@
       </select>
     </form>
   </nav>
-<section>
-<p id="countdown"></p>
-</section>
+
+
+
 <script type="text/javascript" src="js/default.js"></script>
 </body>
 </html>
