--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <title>うええ</title>
 </haed>
 <body>
-  <section>
-    <p id="cookie"></p><p id="countdown"></p>
+  <section><p id="countdown"></p>
+    <p id="cookie"></p>
   </section>
   <nav>
     <form id="form">
