--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <title>うええ</title>
 </haed>
 <body>
-  <section><p id="countdown"></p>
+  <section>
+    <p id="countdown"></p>
     <p id="cookie"></p>
   </section>
   <nav>
