--- a/other.html
+++ b/other.html
@@ -5,7 +5,7 @@
 <title>別のページ</title>
 </head>
 <body>
-  <section><p id="cookie"></p></section>
+  <section><p id="countdown"></p><p id="cookie"></p></section>
 <nav>
 <form id="form">
 <select name="select">
